--- a/cx.config
+++ b/cx.config
@@ -1,4 +1,4 @@
 {
-"project": "WEBGOAT",
-"team": "CPA"
+"project": "CxServer\\Risk Assurance\\CPA\\WEBGOAT",
+"team": "CxServer\\Risk Assurance\\CPA"
 }
