--- a/cx.config
+++ b/cx.config
@@ -1,4 +1,4 @@
 {
-"project": "CxServer\\Risk Assurance\\CPA\\WEBGOAT",
-"team": "CxServer\\Risk Assurance\\CPA"
+"project": "WEBGOAT",
+"team": \CxServer\SP\Checkmarx
 }
